2005-04-26  Stephen Deasey  <sdeasey@users.sf.net>

	* tests/testserver/pages/ns_adp_compress.adp: Add missing file for
	gzip compression tests.

	* tests/testserver/modules/vhost.tcl: Add supporting procs for
	virtual hosting tests.

	* nsd/tclresp.c: Cleanup and reformat code.  Clarify comments.

	* tests/ns_conn_host.test:
	* tests/ns_pagepath.test:
	* ns_serverpath.test: Convert to new nstest_http command and the
	use seperate virtual hosts for tests.

	* tests/http.test:
	* ns_adp_compress.test:
	* tclresp.test: Convert	to new nstest_http command for testing
	http responses.

	* tests/test.nscfg: Create seperate virtual servers for virtual
	host tests and custom serverroot and conn host tests.

	* tests/testserver/pages/10bytes: Add missing 10bytes file for
	tclresp.test.

	* tests/testserver/modules/http.tcl:
	* tests/testserver/modules/testhttp.tcl: Rename http.tcl
	testhttp.tcl so that it doesn't overide the standard tcl/http.tcl
	file.  Command now correctly only sets default headers once so
	that e.g. the Host header can be overridden. Retrieve host and
	port to connect to from config file.


2005-04-26  Vlad Seryakov  <seryakov@users.sf.net>

	* tcl/file.tcl: added support for caching tcl bytecode if 
	ns_cache module is loaded, it is used to be in tclcache.tcl 
	file which is missing in NS

2005-04-21  Zoran Vasiljevic  <vasiljevic@users.sf.net>

	* nsd/httptime.c: fixed usage of non-mt-safe timegm()
	by adding a protective lock (Bug#  1187635).

2005-04-17  Zoran Vasiljevic  <vasiljevic@users.sf.net>

	* nsd/conn.c: removed "ns_conn flush" option added 
	recently since not needed. The trick is done with 
	the "ns_headers" command.

2005-04-18  Stephen Deasey  <sdeasey@users.sf.net>

	* nsd/nsd.h:
	* nsd/tclcmds.c:
	* nsd/tclresp.c:
	* tests/tclresp.test: Remove support for connid parameter to tcl
	response commands. (RFE #1156107)

	* nsd/conn.c:
	* tests/ns_conn_host.test: Prevent truncation of content already in