@@ -33,70 +33,70 @@
 #
 # Makefile.global.in --
 #
-#	Common and platform-specific make variables to be included
-#	by other makefiles.
+#     Common and platform-specific make variables to be included
+#     by other makefiles.
 #
 
-NAVISERVER	= @NAVISERVER@
-srcdir		= @SRCDIR@
+NAVISERVER       = @NAVISERVER@
+srcdir           = @SRCDIR@
 
-RM           	= /bin/rm -f
-MKDIR		= /bin/mkdir -p
+RM               = /bin/rm -f
+MKDIR            = /bin/mkdir -p
 
 ifdef NSBUILD
-    INSTALL_SH	= $(srcdir)/install-sh -c
+    INSTALL_SH	 = $(srcdir)/install-sh -c
 else
-    INSTALL_SH	= $(INSTBIN)/install-sh -c
+    INSTALL_SH	 = $(INSTBIN)/install-sh -c
 endif
-INSTALL_DATA	= $(INSTALL_SH) -m 644
+INSTALL_DATA	 = $(INSTALL_SH) -m 644
 
-RANLIB	     	= @TCL_RANLIB@
-LIBEXT		= @TCL_SHLIB_SUFFIX@
-TCL_EXEC_PREFIX	= @TCL_EXEC_PREFIX@
-LIB_RUNTIME_DIR =
-LDLIB		= @LDLIB@
-LDSO		= @LDSO@
-CCRFLAG         = @CCRFLAG@
-LDRFLAG         = @LDRFLAG@
+RANLIB           = @TCL_RANLIB@
+LIBEXT           = @TCL_SHLIB_SUFFIX@
+TCL_EXEC_PREFIX  = @TCL_EXEC_PREFIX@
+LIB_RUNTIME_DIR  =
+LDLIB            = @LDLIB@
+LDSO             = @LDSO@
+CCRFLAG          = @CCRFLAG@
+LDRFLAG          = @LDRFLAG@
 CCRPATH         += @CCRPATH@
 LDRPATH         += @LDRPATH@
-CC		= $(PURIFY) @TCL_CC@
-CFLAGS_DEBUG	= @TCL_CFLAGS_DEBUG@
-CFLAGS_OPTIMIZE = @TCL_CFLAGS_OPTIMIZE@
-CFLAGS_WARNING	= @TCL_CFLAGS_WARNING@
-CFLAGS_INCLUDE	= -I$(INCDIR) @TCL_INCLUDE_SPEC@
-CFLAGS_EXTRA	= @TCL_SHLIB_CFLAGS@ @TCL_EXTRA_CFLAGS@
-DEFS      	= -DNO_CONST @TCL_DEFS@ @DEFS@
-CFLAGS		+= @CFLAGS_DEFAULT@ $(CFLAGS_WARNING) $(CFLAGS_EXTRA) $(CFLAGS_INCLUDE) @CPPFLAGS@ $(DEFS)
+CC               = $(PURIFY) @TCL_CC@
+CFLAGS_DEBUG     = @TCL_CFLAGS_DEBUG@
+CFLAGS_OPTIMIZE  = @TCL_CFLAGS_OPTIMIZE@
+CFLAGS_WARNING   = @TCL_CFLAGS_WARNING@
+CFLAGS_INCLUDE   = -I$(INCDIR) @TCL_INCLUDE_SPEC@
+CFLAGS_EXTRA     = @TCL_SHLIB_CFLAGS@ @TCL_EXTRA_CFLAGS@
+DEFS             = -DNO_CONST @TCL_DEFS@ @DEFS@
+CFLAGS          += @CFLAGS_DEFAULT@ $(CFLAGS_WARNING) $(CFLAGS_EXTRA) $(CFLAGS_INCLUDE) @CPPFLAGS@ $(DEFS)
 
 ifndef NSBUILD
-    LDFLAGS	+= -L$(NAVISERVER)/lib
-    LIBS	+= -lnsthread -lnsd
-    INCDIR	= $(NAVISERVER)/include
+    LDFLAGS += -L$(NAVISERVER)/lib
+    LIBS    += -lnsthread -lnsd
+    INCDIR   = $(NAVISERVER)/include
 else
     LDFLAGS	+= -L../nsthread -L../nsd
-    INCDIR	= ../include
+    INCDIR   = ../include
     ifneq (nsthread,$(LIB))
-    	LIBS	+= -lnsthread
-    	ifneq (nsd,$(LIB))
+        LIBS += -lnsthread
+        ifneq (nsd,$(LIB))
             ifneq (nsthreadtest,$(PGM))
-                LIBS	+= -lnsd
+                LIBS += -lnsd
             endif
-    	endif
+        endif
     endif
 endif
 
-LIBS		+= @TCL_LIB_SPEC@ @TCL_LIBS@ @LDFLAGS@ @LIBS@
-CCLIBS		= $(LIBS) @TCL_LD_FLAGS@
+LIBS        += @TCL_LIB_SPEC@ @TCL_LIBS@ @LDFLAGS@ @LIBS@
+CCLIBS       = $(LIBS) @TCL_LD_FLAGS@
 
 # Install directories
-INSTBIN		= $(NAVISERVER)/bin
-INSTLIB		= $(NAVISERVER)/lib
-INSTMOD		= $(NAVISERVER)/modules
-INSTTCL		= $(NAVISERVER)/modules/tcl
-INSTSRV		= $(NAVISERVER)/servers/server1
-INSTSRVMOD	= $(INSTSRV)/modules
-INSTSRVPAG	= $(INSTSRV)/pages
+INSTBIN      = $(NAVISERVER)/bin
+INSTLIB      = $(NAVISERVER)/lib
+INSTMOD      = $(NAVISERVER)/modules
+INSTTCL      = $(NAVISERVER)/modules/tcl
+INSTSRV      = $(NAVISERVER)/servers/server1
+INSTSRVMOD   = $(INSTSRV)/modules
+INSTSRVPAG   = $(INSTSRV)/pages
 
 # Platform-specific options.
 uname = $(shell uname -a)
@@ -104,18 +104,18 @@ uname = $(shell uname -a)
 # Solaris 2.6+
 ifneq (,$(findstring SunOS,$(uname)))
     ifneq (,$(findstring 5.6,$(uname)))
-        LIBS+=-lthread -lposix4
+        LIBS += -lthread -lposix4
     else
-        LIBS+=-lrt
+        LIBS += -lrt
     endif
 endif
 
 # Add dynamic library entry point flags.
 ifdef LIBINIT
     ifneq (,$(findstring Darwin,$(uname)))
-	LDLIB	+= -init _$(LIBINIT)
+        LDLIB += -init _$(LIBINIT)
     else
-	CFLAGS	+= -D$(LIBINIT)=_init
+        CFLAGS += -D$(LIBINIT)=_init
     endif
 endif
  
